# ESMake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bothExample.em  enumExample.em  example.clon  example.em  example.esm  langExample.em  testing.clon  testing.em
src/: errorMake.c  errorMake.h  errorString.h  esmake.c  esmake.h  file.c  file.h  item.c  item.h  macros.h  main.c  mode.c  mode.h  parser.c  parser.h  progInfo.h.in  setting.c  setting.h  varFlag.c  varFlag.h  variable.c  variable.h  verbose.c  verbose.h  whitespace.c  whitespace.h
src/Clon-C/: CMakeLists.txt
src/Clon-C/src/: clon.c  clonc.c  clonc.h  clonc_clon.h  type.c  varFlag.c
src/Clon-C/src/internal/: lang.h  privInfo.h  type.h  varFlag.h
src/Clon-C/src/internal/lang/: english.h
src/Clon-C/vim/ftdetect/: Clon.vim
src/Clon-C/vim/syntax/: clon.vim
vim/ftdetect/: ESMake.vim
vim/syntax/: esmake.vim
